# oreilly-finetuning-llm

./: 11-bert-finetune-classification.ipynb  12-alternative-zeroshot.ipynb  21-sbert-finetune.ipynb  22a-create-sbert-data-zeroentropy-reranker.ipynb  22b-create-sbert-data-jina-reranker.ipynb  22c-create-sbert-data-qwen-reranker.ipynb  23-sbert-finetune-qwen-reranker.ipynb  31b-qwen3-07.ipynb  32b-llama32-1.ipynb  33a-smolm-1-huggingface.ipynb  33b-smolm-1.ipynb  34b-phi3.ipynb  README.md  pyproject.toml
