[project]
name = "finetuning-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.49.2",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kernels>=0.14.1",
    "liger-kernel>=0.8.0",
    "matplotlib>=3.10.9",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "sentence-transformers>=5.5.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "trl>=0.24.0",
    "unsloth>=2026.5.7",
]
